Removed splash screen, removed special Mac Launcher, implemented Badass Jlink to package executable.